--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ken/calendar",
+    "name": "kennabula/calendar",
     "description": "This package will give calendar json",
     "type": "project",
     "license": "MIT",
